# google-timeline-parser

./: .gitignore  Cargo.toml  LICENSE
src/: lib.rs  model.rs  parser.rs  zip.rs
tests/: json-file.rs  zip-archive.rs
